# meta-hack-finale

./: .dockerignore  .gitattributes  .gitignore  .graphify_detect.json  .graphify_python  Dockerfile  README.md  __init__.py  client.py  client_example.py  compare_genomes.py  conftest.py  implement-genesis-features.md  ml_inference.py  openenv-integration.md  openenv.yaml  pdf_text.txt  pyproject.toml  requirements.txt  rollout_baseline.py  rollout_infer.py  rollout_ollama.py  run.py  scratch_test.py  sessions.pkl  skills-lock.json  test_integration.py  test_mcp.py  train.py  train_colab.py  validate.py
.agent/skills/lint-and-validate/scripts/: lint_runner.py
.cursor/plans/: frontend_cleanup_plan_d107f642.plan.md  genesis_usp_proposals_f2db2500.plan.md
blockchain/solana/: .env.example  README.md
blockchain/solana/idl/: genesis_proof.json
colab/: training  training.ipynb
context/: hackathon_idea_3.md
docs/: design.md  huggingface_spaces.md
exports/founder_genomes/: genome_demo-model-rival_20260426_091122.json  genome_demo-model_20260426_091119.json  genome_ollama_deepseek_coder_6p7b_20260426_080026.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: genesis-client.ts  store.ts  use-demo-stream.ts  utils.ts
frontend/src/types/: genesis.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
models/: tokenizer_config.json
models/genesis_final/: adapter_config.json  adapter_model.safetensors
openenv_genesis_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/evals/: reward_summary.json
scripts/: organize_repo.py  plot_rewards.py
server/: __init__.py  app.py  event_engine.py  genome_utils.py  market_maker.py  postmortem_scenarios.py  resurrection_engine.py  reward_engine.py  role_views.py  tools.py  utils.py  world_init.py  world_state.py
server/proof/: canonical.py  merkle.py  solana_client.py
submission/: demo_video_script.md  hf_mini_blog.md
tests/: __init__.py  test_role_views.py  test_simulation_parity.py
tools/dev/: list_routes.py  validate_all.py
(+26 files in other folders)
